--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^17.2.1",
     "gsap": "^3.13.0",
     "lenis": "^1.3.8",
     "meshline": "^3.3.1",
